--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         </li>
                         <li>
                             <i class="fab fa-linkedin"></i>
-                            <span>NOOO !!!</span>
+                            <span>NOOO !!! BASTAAA CHIEDERMELO NON VE LO DO LInKEDIN !!!</span>
                         </li>
                     </ul>
                 </div>
